# HyperOS-Port-Python

./: .editorconfig  .gitignore  .pre-commit-config.yaml  README.md  README_CN.md  README_EN.md  main.py  mypy-curated.ini  pyproject.toml  requirements-dev.txt  requirements-test.txt  requirements.txt  test.py
.github/workflows/: ci.yml
devices/common/: eu_localization.json  features.json  props_global.json  replacements.json  scheduler.json
devices/common/override/os3/product/app/LyraSdkApp/: LyraSdkApp.apk
devices/fuxi/: features.json  replacements.json
devices/mayfly/: features.json  replacements.json
devices/pudding/: replacements.json
docs/: CACHE.md
otatools/: perfmgr.ko
src/: __init__.py
src/app/: cli.py  workflow.py
src/core/: apk_patcher.py  conditions.py  config_merger.py  context.py  device_auto_config.py  framework_modifier.py  modifier.py  packer.py  props.py  rom.py  rom_metadata.py  tooling.py  workspace.py
src/core/modifiers/: __init__.py  base_modifier.py  firmware_modifier.py  framework_modifier.py  plugin_system.py  unified_modifier.py
src/core/modifiers/framework/: __init__.py  base.py  modifier.py  patches.py  tasks.py
src/core/modifiers/plugins/: eu_localization.py  wild_boost.py
src/core/modifiers/plugins/apk/: __init__.py  base.py  devices_overlay.py  htmlviewer.py  installer.py  joyose.py  powerkeeper.py  securitycenter.py  settings.py
src/core/monitoring/: __init__.py  console_ui.py  plugin_integration.py
src/core/rom/: __init__.py  constants.py  extractors.py  package.py  utils.py
src/modules/: base.py  devices_overlay.py  installer.py  joyose.py  powerkeeper.py  securitycenter.py  settings.py
src/utils/: contextpatch.py  fspatch.py  lpunpack.py  otatools_manager.py  payload_dumper.py  sdat2img.py  shell.py  smalikit.py  sync_engine.py  xml_utils.py
tests/: conftest.py  test_cli.py  test_unified_modifier.py  test_workflow.py
tests/core/: test_base_modifier.py  test_cache_manager.py  test_config_loader.py  test_context.py  test_packer_avb_misc.py  test_props_global_json_logic.py  test_rom_metadata.py  test_shell.py  test_tooling.py  test_voice_trigger.py  test_workspace.py
tests/modules/: test_devices_overlay.py
tests/utils/: test_payload_dumper.py  test_smalikit.py
